# unique

./: Cargo.toml  README.md
resource/: test-file.txt
src/: main.rs
