[package]
name = "unique"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.0.15", features = ["derive", "wrap_help"] }
either = "1.8.0"
hashbrown = "0.12.3"
tempfile = "3.3.0"
unicase = "2.6.0"
