[package]
name = "unique"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
strip = "symbols"

[dependencies]
atty = "0.2.14"
clap = { version = "4.1.8", features = ["derive", "wrap_help"] }
either = "1.8.1"
hashbrown = "0.13.2"
tempfile = "3.4.0"
unicase = "2.6.0"
