[package]
name = "unique"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "none"
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0

[dependencies]
clap = { version = "4.5.7", features = ["derive", "wrap_help"] }
either = "1.12.0"
hashbrown = "0.13.2"
tempfile = "3.10.1"
unicase = "2.7.0"
